--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -134,7 +134,19 @@ section[data-tab].active{display:block}
 
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 text-sm">
       <div><p class="font-semibold">📅 Event Date</p><p>18 January 2026</p></div>
-      <div><p class="font-semibold">📍 Venue</p><p>GOD'S TURF</p></div>
+      <div>
+        <p class="font-semibold">📍 Venue</p>
+        <a
+          href="https://www.google.com/maps/search/?api=1&query=GODs+Turf+Kolkata"
+          target="_blank"
+          rel="noopener"
+          class="inline-flex items-center gap-1 text-slate-900 font-medium hover:underline"
+        >
+          GOD&apos;S TURF
+          <span class="text-slate-400 text-xs">↗</span>
+        </a>
+      </div>
+
       <div><p class="font-semibold">⏰ Time</p><p>9:00 AM – 6:00 PM</p></div>
       <div><p class="font-semibold">👥 Organizers</p><p>Debayan, Gourav & Jyotishka</p></div>
 
