--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -234,7 +234,16 @@ section[data-tab].active{display:block}
 <!-- ================= COMING SOON TABS ================= -->
 <section data-tab="teams">
   <div class="bg-white rounded-2xl shadow p-8 coming-soon text-center">
-    <div><div class="text-4xl mb-3">👥</div><h3 class="text-xl font-bold">Teams</h3><p class="text-sm text-slate-600">Coming soon</p></div>
+    <div>
+      <div class="text-4xl mb-3">🎯</div>
+      <h3 class="text-xl font-bold">Team Auction</h3>
+      <p class="text-sm text-slate-700 mt-1 font-medium">
+        Team auction will be held on <span class="font-semibold">14 January 2026</span>.
+      </p>
+      <p class="text-sm text-slate-500 mt-2">
+        For more information, stay tuned.
+      </p>
+    </div>
   </div>
 </section>
 
