--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -225,7 +225,7 @@ section[data-tab].active{display:block}
 
     <div class="border-t pt-6 text-sm text-slate-600">
       <p class="font-semibold">Closing Ceremony</p>
-      <p>Award distribution begins post 5:00 PM.</p>
+      <p>Award distribution begins post 4:00 PM onwards.</p>
     </div>
 
   </div>
