--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -151,17 +151,33 @@ section[data-tab].active{display:block}
       <div><p class="font-semibold">👥 Organizers</p><p>Debayan, Gourav & Jyotishka</p></div>
 
       <div>
-        <p class="font-semibold">👥 Captains</p>
-        <p class="hidden sm:block text-slate-700">
-          Aakash Singh, Thomas Joseph, Yash Agarwal,<br/>
-          Arghyadeep Das, Subhamoy Das, Arkadip Rath,<br/>
-          Ankit Aich, Aritra Adhikari
-        </p>
-        <div class="mobile-pills sm:hidden">
-          <span>Aakash Singh</span><span>Thomas Joseph</span>
-          <span>Yash Agarwal</span><span>Arghyadeep Das</span>
-          <span>Subhamoy Das</span><span>Arkadip Rath</span>
-          <span>Ankit Aich</span><span>Aritra Adhikari</span>
+        <p class="font-semibold mb-2">👥 Captains</p>
+      
+        <div class="grid grid-cols-2 sm:grid-cols-3 gap-2">
+          <span class="px-3 py-1 rounded-full bg-slate-100 text-sm font-medium text-slate-800">
+            Dipanjan Majumder
+          </span>
+          <span class="px-3 py-1 rounded-full bg-slate-100 text-sm font-medium text-slate-800">
+            Thomas Joseph
+          </span>
+          <span class="px-3 py-1 rounded-full bg-slate-100 text-sm font-medium text-slate-800">
+            Yash Agarwal
+          </span>
+          <span class="px-3 py-1 rounded-full bg-slate-100 text-sm font-medium text-slate-800">
+            Ankit Aich
+          </span>
+          <span class="px-3 py-1 rounded-full bg-slate-100 text-sm font-medium text-slate-800">
+            Sourav Acharjee
+          </span>
+          <span class="px-3 py-1 rounded-full bg-slate-100 text-sm font-medium text-slate-800">
+            Arghyadeep Das
+          </span>
+          <span class="px-3 py-1 rounded-full bg-slate-100 text-sm font-medium text-slate-800">
+            Subhamoy Das
+          </span>
+          <span class="px-3 py-1 rounded-full bg-slate-100 text-sm font-medium text-slate-800">
+            Hrishi
+          </span>
         </div>
       </div>
 
