--- a/pages/football_auctioneer.html
+++ b/pages/football_auctioneer.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Football Auctioneer</title>
-<script type="module" src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
     
   <!-- Favicon -->
   <link rel="icon" href="./assets/group-logo/we_are_eleven_logo.jpg" />
