--- a/pages/football_auctioneer.html
+++ b/pages/football_auctioneer.html
@@ -222,12 +222,14 @@
 
   // -- Data you can edit --
   const TEAMS = [
-    { name: 'Ayon Roy', budget: 4000000 },
-    { name: 'Subhojit Dutta', budget: 4000000 },
-    { name: 'Ritam Chowdhury', budget: 4000000 },
-    { name: 'Shubhanjan Basu', budget: 4000000 },
-    { name: 'Srinjoy Kundu', budget: 4000000 },
+    { name: 'Dipanjan majumder', budget: 4000000 },
+    { name: 'THOMAS JOSEPH', budget: 4000000 },
+    { name: 'Yash Agarwal', budget: 4000000 },
+    { name: 'Ankit Aich', budget: 4000000 },
+    { name: 'Sourav Acharjee', budget: 4000000 },
+    { name: 'Arghyadeep Das', budget: 4000000 },
     { name: 'Subhamoy Das', budget: 4000000 },
+    { name: 'Hrishi', budget: 4000000 },
   ];
 
   const PLAYERS = {
