--- a/pages/football_auctioneer.html
+++ b/pages/football_auctioneer.html
@@ -234,49 +234,43 @@
 
   const PLAYERS = {
     GK: [
-      { id: 'gk1', name: 'Aditya Chakraborty', basePrice: 400000, img: 'Aditya.jpg', position: 'Goalkeeper' },
-      { id: 'gk2', name: 'Arko Dutta', basePrice: 400000, img: 'Arka.jpg', position: 'Goalkeeper' },
-      { id: 'gk3', name: 'Arnab Talukdar', basePrice: 400000, img: 'Arnab.jpg', position: 'Goalkeeper' },
-      { id: 'gk4', name: 'Dhruv', basePrice: 400000, img: 'Dhruv.jpg', position: 'Goalkeeper' },
-      { id: 'gk5', name: 'Rupayan Chakraborty', basePrice: 400000, img: 'Rupayan.jpg', position: 'Goalkeeper' },
-      { id: 'gk6', name: 'Soumadeep Dutta', basePrice: 400000, img: 'Soumodeep.jpg', position: 'Goalkeeper' },
+      { id: 'gk1', name: 'Ayon Roy', basePrice: 400000, img: './assets/players/ayon_roy.jpg', position: 'Goalkeeper' },
+      { id: 'gk2', name: 'Aditya Chakraborty', basePrice: 400000, img: './assets/players/aditya_chakraborty.jpg', position: 'Goalkeeper' },
+      { id: 'gk3', name: 'Arnab Talukdar', basePrice: 400000, img: './assets/players/arnab_talukdar.jpg', position: 'Goalkeeper' },
+      { id: 'gk4', name: 'Rupayan Chakravarty', basePrice: 400000, img: './assets/players/rupayan_chakravarty.jpg', position: 'Goalkeeper' },
+      { id: 'gk5', name: 'Arka Dutta', basePrice: 400000, img: './assets/players/arka_dutta.jpg', position: 'Goalkeeper' },
+      { id: 'gk6', name: 'Kinjal Bhattacharyya', basePrice: 400000, img: './assets/players/kinjal_bhattacharyya.jpg', position: 'Goalkeeper' },
+      { id: 'gk7', name: 'Shrish Mukherjee', basePrice: 400000, img: './assets/players/shrish_mukherjee.jpg', position: 'Goalkeeper' },
+      { id: 'gk8', name: 'Srinjoy Kundu', basePrice: 400000, img: './assets/players/srinjoy_kundu.jpg', position: 'Goalkeeper' },
     ],
-    A: [
-      { id: 'a1', name: 'Soumik Mukherjee', basePrice: 600000, img: 'Soumik.jpg', position: 'Defence' },
-      { id: 'a2', name: 'Suvam Chakraborty', basePrice: 600000, img: 'Suvam.jpg', position: 'Defence' },
-      { id: 'a3', name: 'Jeffin Mathew', basePrice: 600000, img: 'Jeff.jpg', position: 'Midfield' },
-      { id: 'a4', name: 'Risove Show', basePrice: 600000, img: 'Risove.jpg', position: 'Midfield' },
-      { id: 'a5', name: 'Vasu Gupta', basePrice: 600000, img: 'Vasu.jpg', position: 'Striker' },
+   A: [
+      { id: 'a1', name: 'Ritam Chowdhury', basePrice: 600000, img: './assets/players/ritam_chowdhury.jpg', position: 'Defence' },
+      { id: 'a2', name: 'Aditya Sen', basePrice: 600000, img: './assets/players/aditya_sen.jpg', position: 'Midfield' },
+      { id: 'a3', name: 'Vasu Gupta', basePrice: 600000, img: './assets/players/vasu_gupta.jpg', position: 'Striker' },
+      { id: 'a4', name: 'Kaustav Guha Mazumdar', basePrice: 600000, img: './assets/players/kaustav_guha_mazumdar.jpg', position: 'Midfield' },
+      { id: 'a5', name: 'Supratim Sengupta', basePrice: 600000, img: './assets/players/supratim_sengupta.jpg', position: 'Striker' },
+      { id: 'a6', name: 'Soumik Mukherjee', basePrice: 600000, img: './assets/players/soumik_mukherjee.jpg', position: 'Defence' },
+      { id: 'a7', name: 'Subhayan Banerjee', basePrice: 600000, img: './assets/players/subhayan_banerjee.jpg', position: 'Defence' },
     ],
-    B: [
-      { id: 'r1', name: 'Rahul Sarkar', position: 'Defence', basePrice: 500000, img: 'Rahul.jpg' },
-      { id: 'a1', name: 'Akash Mukherjee', position: 'Midfield', basePrice: 500000, img: 'AkashM.jpg' },
-      { id: 'b1', name: '... Biswajit Karmakar', position: 'Midfield', basePrice: 500000, img: 'Biswajit.jpg' },
-      { id: 'k1', name: 'Krishnendu Mondal', position: 'Midfield', basePrice: 500000, img: 'Krishnendu.jpg' },
-      { id: 'ar1', name: 'Aritra Adhikari', position: 'Striker', basePrice: 500000, img: 'Aritra.jpg' },
-      { id: 's1', name: 'Sourav Acharya', position: 'Striker', basePrice: 500000, img: 'SouravA.jpg' },
-      { id: 'su1', name: 'Supratim Sengupta', position: 'Striker', basePrice: 500000, img: 'Supratim.jpg' },
-      { id: 'pr1', name: 'Proloy Malik', position: 'Defence', basePrice: 500000, img: 'Proloy.jpg' },
-      { id: 'pu1', name: 'Pulak Dowari', position: 'Defence', basePrice: 500000, img: 'Pulak.jpg' },
-      { id: 'sa1', name: 'Sanchay Bose', position: 'Defence', basePrice: 500000, img: 'Sanchay.jpg' },
-      { id: 'si1', name: 'Siddhant Ameria', position: 'Midfield', basePrice: 500000, img: 'Siddhant.jpg' },
-      { id: 'so1', name: 'Sourav Das', position: 'Midfield', basePrice: 500000, img: 'SouravD.jpg' },
-      { id: 'k2', name: 'Kaustav Guha Mazumdar', position: 'Striker', basePrice: 500000, img: 'Kaustav.jpg' },
-      { id: 'sh1', name: 'Shivaditya Gunin', position: 'Striker', basePrice: 500000, img: 'Shivaditya.jpg' },
-      { id: 'am1', name: 'Aman Pandey', position: 'Defence', basePrice: 500000, img: 'Aman.jpg' },
-      { id: 'ay1', name: 'Ayan Das', position: 'Defence', basePrice: 300000, img: 'Ayan.jpg' },
-      { id: 'k3', name: 'Kingshuk Banerjee', position: 'Midfield', basePrice: 300000, img: 'Kingshuk.jpg' },
-      { id: 'ar2', name: 'Arghadeep Das', position: 'Defence', basePrice: 300000, img: 'Arghadeep.jpg' },
-      { id: 'di1', name: 'Dibwayan Trivedi', position: 'Defence', basePrice: 300000, img: 'Dibyawan.jpg' },
-      { id: 'di2', name: 'Dipanjan Mazumder', position: 'Defence', basePrice: 300000, img: 'Dipanjan.jpg' },
-      { id: 'sa2', name: 'Satyaki Sarkar', position: 'Defence', basePrice: 300000, img: 'Satyaki.jpg' },
-      { id: 'ya1', name: 'Yash Agarwal', position: 'Defence', basePrice: 300000, img: 'Yash.jpg' },
-      { id: 'su2', name: 'Subhayan Banerjee', position: 'Defence', basePrice: 300000, img: 'Subhayan.jpg' },
-      { id: 'an1', name: 'Ankit Aich', position: 'Defence', basePrice: 300000, img: 'Ankit.jpg' },
-      { id: 'sa3', name: 'Sagnik Chakraborty', position: 'Midfield', basePrice: 300000, img: 'Sagnik.jpg' },
-      { id: 'sh2', name: 'Shardendu Lahiri', position: 'Midfield', basePrice: 300000, img: 'Shardendu.jpg' },
+   B: [
+      { id: 'b1', name: 'Aritra Adhikari', position: 'Striker', basePrice: 500000, img: './assets/players/aritra_adhikari.jpg' },
+      { id: 'b2', name: 'Rahul Sarkar', position: 'Defence', basePrice: 500000, img: './assets/players/rahul_sarkar.jpg' },
+      { id: 'b3', name: 'Aakash Singh', position: 'Midfield', basePrice: 500000, img: './assets/players/aakash_singh.jpg' },
+      { id: 'b4', name: 'Arkadip Rath', position: 'Defence', basePrice: 300000, img: './assets/players/arkadip_rath.jpg' },
+      { id: 'b5', name: 'Aman Pandey', position: 'Defence', basePrice: 500000, img: './assets/players/aman_pandey.jpg' },
+      { id: 'b6', name: 'Reet Karmakar', position: 'Midfield', basePrice: 300000, img: './assets/players/reet_karmakar.jpg' },
+      { id: 'b7', name: 'Satyaki Das', position: 'Defence', basePrice: 300000, img: './assets/players/satyaki_das.jpg' },
+      { id: 'b8', name: 'Sankhaneel Roychowdhury', position: 'Midfield', basePrice: 500000, img: './assets/players/sankhaneel_roychowdhury.jpg' },
+      { id: 'b9', name: 'Akash Mukherjee', position: 'Midfield', basePrice: 500000, img: './assets/players/akash_mukherjee.jpg' },
+      { id: 'b10', name: 'Prashnik Dey', position: 'Midfield', basePrice: 300000, img: './assets/players/prashnik_dey.jpg' },
+      { id: 'b11', name: 'Mayank Dutta', position: 'Defence', basePrice: 300000, img: './assets/players/mayank_dutta.jpg' },
+      { id: 'b12', name: 'Subhojit Manna (Bony)', position: 'Midfield', basePrice: 500000, img: './assets/players/subhojit_manna.jpg' },
+      { id: 'b13', name: 'Anish Biswas', position: 'Defence', basePrice: 300000, img: './assets/players/anish_biswas.jpg' },
+      { id: 'b14', name: 'Arindam Rakshit', position: 'Defence', basePrice: 300000, img: './assets/players/arindam_rakshit.jpg' },
+      { id: 'b15', name: 'Arjobroto Das (Arjo)', position: 'Midfield', basePrice: 500000, img: './assets/players/arjobroto_das.jpg' },
+      { id: 'b16', name: 'Moinak Dwarik', position: 'Midfield', basePrice: 300000, img: './assets/players/moinak_dwarik.jpg' },
+      { id: 'b17', name: 'Kaustav Samanta', position: 'Striker', basePrice: 500000, img: './assets/players/kaustav_samanta.jpg' },
     ],
-  };
 
   // -- State --
   const state = {
