--- a/pages/football_auctioneer.html
+++ b/pages/football_auctioneer.html
@@ -59,7 +59,7 @@
 <!-- HEADER -->
 <header class="sticky top-0 z-40 bg-white/90 backdrop-blur border-b border-slate-200">
   <div class="max-w-7xl mx-auto px-4 py-3 flex items-center gap-3">
-    <div class="text-xl font-bold">⚽ Independence Cup 2025 Auction</div>
+    <div class="text-xl font-bold">❄️ Winter Carnival Cup 2026</div>
     <nav class="ml-auto flex items-center gap-2 text-sm">
       <button id="btnSaveState" class="px-3 py-1.5 rounded-xl bg-slate-900 text-white hover:opacity-90">Save</button>
       <label class="px-3 py-1.5 rounded-xl bg-slate-100 hover:bg-slate-200 cursor-pointer">
