--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -227,7 +227,59 @@ section[data-tab].active{display:block}
 
     <div>
       <h3 class="text-xl font-bold mb-3">Competition Structure</h3>
-      <p class="italic text-slate-600 text-sm">Yet to be decided.</p>
+
+      <ul class="list-disc pl-6 text-sm text-slate-700 rule-list space-y-1">
+        <li>
+          The tournament will be conducted in a <strong>League (Round-Robin) format</strong>.
+        </li>
+        <li>
+          A total of <strong>8 teams</strong> will participate.
+        </li>
+        <li>
+          Each team will play <strong>once against every other team</strong>.
+        </li>
+        <li>
+          Total league matches to be played: <strong>28</strong>.
+        </li>
+        <li>
+          Matches will be played on <strong>two grounds simultaneously</strong>.
+        </li>
+        <li>
+          Each match will have a duration of <strong>16 minutes</strong>
+          (8 minutes per half with a 2-minute halftime break).
+        </li>
+        <li>
+          Matches will follow <strong>strict timing</strong>. Delays will not extend match duration.
+        </li>
+      </ul>
+
+      <div class="mt-4">
+        <p class="font-semibold text-sm mb-1">Points System</p>
+        <ul class="list-disc pl-6 text-sm text-slate-700 rule-list">
+          <li>Win – 3 points</li>
+          <li>Draw – 1 point each</li>
+          <li>Loss – 0 points</li>
+        </ul>
+      </div>
+
+      <div class="mt-4">
+        <p class="font-semibold text-sm mb-1">League Ranking Criteria</p>
+        <ul class="list-decimal pl-6 text-sm text-slate-700 rule-list">
+          <li>Total points</li>
+          <li>Goal difference</li>
+          <li>Goals scored</li>
+          <li>Head-to-head result</li>
+          <li>Organiser’s decision (if required)</li>
+        </ul>
+      </div>
+
+      <div class="mt-4 text-sm text-slate-700">
+        <p>
+          The final league standings will determine the
+          <strong>Winner, Runner-up, and Third Place</strong>.
+          No knockout matches will be played.
+        </p>
+      </div>
     </div>
 
     <div>
