--- a/pages/football_auctioneer.html
+++ b/pages/football_auctioneer.html
@@ -234,13 +234,13 @@
 
   const PLAYERS = {
     GK: [
-      { id: 'gk1', name: 'Srinjoy Kundu', basePrice: 400000, img: '/assets/players/srinjoy_kundu.jpg', position: 'Goalkeeper' },
-      { id: 'gk2', name: 'Aditya Chakraborty', basePrice: 400000, img: '/assets/players/adi.jpg', position: 'Goalkeeper' },
-      { id: 'gk3', name: 'Arnab Talukdar', basePrice: 400000, img: '/assets/players/arnab_talukdar.jpg', position: 'Goalkeeper' },
-      { id: 'gk4', name: 'Rupayan Chakravarty', basePrice: 400000, img: '/assets/players/rupayan_chakravarty.jpg', position: 'Goalkeeper' },
-      { id: 'gk5', name: 'Arka Dutta', basePrice: 400000, img: '/assets/players/arka_dutta.jpg', position: 'Goalkeeper' },
-      { id: 'gk6', name: 'Kinjal Bhattacharyya', basePrice: 400000, img: '/assets/players/kinjal_bhattacharyya.jpg', position: 'Goalkeeper' },
-      { id: 'gk7', name: 'Shrish Mukherjee', basePrice: 400000, img: '/assets/players/shrish_mukherjee.jpg', position: 'Goalkeeper' },
+      { id: 'gk1', name: 'Srinjoy Kundu', basePrice: 400000, img: '../assets/players/srinjoy_kundu.jpg', position: 'Goalkeeper' },
+      { id: 'gk2', name: 'Aditya Chakraborty', basePrice: 400000, img: '../assets/players/adi.jpg', position: 'Goalkeeper' },
+      { id: 'gk3', name: 'Arnab Talukdar', basePrice: 400000, img: '../assets/players/arnab_talukdar.jpg', position: 'Goalkeeper' },
+      { id: 'gk4', name: 'Rupayan Chakravarty', basePrice: 400000, img: '../assets/players/rupayan_chakravarty.jpg', position: 'Goalkeeper' },
+      { id: 'gk5', name: 'Arka Dutta', basePrice: 400000, img: '../assets/players/arka_dutta.jpg', position: 'Goalkeeper' },
+      { id: 'gk6', name: 'Kinjal Bhattacharyya', basePrice: 400000, img: '../assets/players/kinjal_bhattacharyya.jpg', position: 'Goalkeeper' },
+      { id: 'gk7', name: 'Shrish Mukherjee', basePrice: 400000, img: '../assets/players/shrish_mukherjee.jpg', position: 'Goalkeeper' },
     ],
    A: [
       { id: 'a1', name: 'Ritam Chowdhury', basePrice: 600000, img: './assets/players/ritam_chowdhury.jpg', position: 'Defence' },
